# ag

./: .gitignore  CLAUDE.md  Makefile  README.md  go.mod  go.sum  main.go
.playwright-mcp/: page-2026-07-12T15-13-23-138Z.yml  page-2026-07-12T15-18-59-075Z.yml  page-2026-07-12T15-19-34-782Z.yml  page-2026-07-12T15-39-07-443Z.yml
agent/: agent.go  agent_test.go
bootstrap/: bootstrap.go  bootstrap_test.go
config/: config.go  config_test.go
examples/hackernews/: ag.yaml.example
examples/lawplain/: ag.yaml.example
examples/mmkr/: pyproject.toml
examples/mmkr/mmkr/: __init__.py  cli.py  config.py  downloader.py  models.py  processor.py  scraper.py
examples/photos/: Makefile  ag.yaml.example  photos.swift
scripts/: test-integration.sh
tool/: cli.go  cli_test.go  config.go  config_test.go  skill.go  skill_test.go  web.go  web_profile.go  web_profile_test.go
ui/: ui.go
