[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mmkr"
version = "0.1.0"
description = "Manga downloader and PDF generator"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "Pillow>=10.0.0",
    "img2pdf>=0.5.0",
    "tqdm>=4.66.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
agent = [
    "anthropic>=0.40.0",
    "psutil>=5.9.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-mock>=3.12.0",
    "responses>=0.24.0",
]

[tool.setuptools.packages.find]
include = ["mmkr*", "mmkr_agent*"]

[project.scripts]
mmkr = "mmkr.cli:app"
mmkr-agent = "mmkr_agent.agent:app"
